<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.NewFriendFragment">

    <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/et_mid_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mid_name"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/et_last_name" />

    <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/et_mid_name" />

    <EditText
            android:id="@+id/et_nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nick_name"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/et_first_name" />

    <DatePicker
            android:id="@+id/dp_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_nick_name" />

    <Button
            android:id="@+id/btn_create_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_friend"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>