<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="dateEditListener"
                type="android.view.View.OnClickListener" />
        <variable
                name="friend"
                type="com.morshues.connbroandroid.db.model.Person" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.FriendCreateFragment">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/et_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text="@{friend.lastName}"
                        app:layout_constraintTop_toTopOf="parent" />

                <EditText
                        android:id="@+id/et_mid_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mid_name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text="@{friend.midName}"
                        app:layout_constraintTop_toBottomOf="@id/et_last_name" />

                <EditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text="@{friend.firstName}"
                        app:layout_constraintTop_toBottomOf="@id/et_mid_name" />

                <EditText
                        android:id="@+id/et_nick_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nick_name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text="@{friend.nickName}"
                        app:layout_constraintTop_toBottomOf="@id/et_first_name" />

                <TextView
                        android:id="@+id/l_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthday"
                        android:padding="8dp"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_nick_name" />

                <TextView
                        android:id="@+id/tv_birthday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/touch_to_input"
                        android:onClick="@{dateEditListener}"
                        android:padding="8dp"
                        android:textSize="18sp"
                        app:dateText="@{friend.birthday}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/l_birthday"
                        app:layout_constraintTop_toTopOf="@id/l_birthday" />

                <EditText
                        android:id="@+id/et_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/note"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:singleLine="false"
                        android:text="@{friend.note}"
                        app:layout_constraintTop_toBottomOf="@id/l_birthday" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>