<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import
                alias="Frequency"
                type="com.morshues.connbroandroid.widget.Frequency" />

        <import
                alias="Type"
                type="com.morshues.connbroandroid.widget.Frequency.Type" />

        <variable
                name="frequency"
                type="com.morshues.connbroandroid.widget.Frequency" />

        <variable
                name="onTypeSelectedListener"
                type="android.widget.AdapterView.OnItemSelectedListener" />

        <variable
                name="textDayOfWeekOfMonth"
                type="String" />

        <variable
                name="textDayOfWeekOfMonthOfYear"
                type="String" />

        <variable
                name="textDayOfWeekOfYear"
                type="String" />

        <variable
                name="onSaveListener"
                type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

        <LinearLayout
                android:id="@+id/lyt_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constrainedHeight="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <Spinner
                    android:id="@+id/spn_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/freq_picker_type_arr"
                    app:enabled="@{frequency.enable}"
                    app:layout_constraintEnd_toStartOf="@id/sw_enable"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:onItemSelected="@{onTypeSelectedListener}" />

            <Switch
                    android:id="@+id/sw_enable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={frequency.enable}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/spn_type"
                    app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/layer_top"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:constraint_referenced_ids="l_every_prefix,et_every,l_every_postfix"
                app:flow_maxElementsWrap="4"
                app:flow_verticalStyle="packed"
                app:flow_wrapMode="aligned"
                app:flow_horizontalGap="4dp"
                app:layout_constraintTop_toBottomOf="@id/lyt_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/l_every_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/freq_picker_every_prefix"
                tools:ignore="MissingConstraints" />

        <EditText
                android:id="@+id/et_every"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@={frequency.intervalStr}"
                tools:ignore="MissingConstraints"
                tools:text="3" />

        <TextView
                android:id="@+id/l_every_postfix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:frequency="@{frequency}"
                tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Group
                android:id="@+id/g_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="et_every,l_every_prefix,l_every_postfix"
                app:enabled="@{frequency.enable}" />

        <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:constraint_referenced_ids="tv_day_of_week_1,tv_day_of_week_2,tv_day_of_week_3,tv_day_of_week_4,tv_day_of_week_5,tv_day_of_week_6,tv_day_of_week_7"
                app:flow_maxElementsWrap="4"
                app:flow_wrapMode="aligned"
                app:flow_verticalGap="8dp"
                app:flow_horizontalBias="0"
                app:layout_constraintTop_toBottomOf="@id/layer_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/lyt_bottom" />

        <TextView
                android:id="@+id/tv_day_of_week_1"
                style="@style/WeekOfDaySelector"
                android:onClick="@{() -> frequency.toggleBit(0)}"
                android:text="@string/day_of_week_1"
                app:selected="@{frequency.sunday}"
                tools:ignore="MissingConstraints" />

        <TextView
                android:id="@+id/tv_day_of_week_2"
                style="@style/WeekOfDaySelector"
                android:onClick="@{() -> frequency.toggleBit(1)}"
                android:text="@string/day_of_week_2"
                app:selected="@{frequency.monday}"
                tools:ignore="MissingConstraints" />

        <TextView
                android:id="@+id/tv_day_of_week_3"
                style="@style/WeekOfDaySelector"
                android:onClick="@{() -> frequency.toggleBit(2)}"
                android:text="@string/day_of_week_3"
                app:selected="@{frequency.tuesday}"
                tools:ignore="MissingConstraints" />

        <TextView
                android:id="@+id/tv_day_of_week_4"
                style="@style/WeekOfDaySelector"
                android:onClick="@{() -> frequency.toggleBit(3)}"
                android:text="@string/day_of_week_4"
                app:selected="@{frequency.wednesday}"
                tools:ignore="MissingConstraints" />

        <TextView
                android:id="@+id/tv_day_of_week_5"
                style="@style/WeekOfDaySelector"
                android:onClick="@{() -> frequency.toggleBit(4)}"
                android:text="@string/day_of_week_5"
                app:selected="@{frequency.thursday}"
                tools:ignore="MissingConstraints" />

        <TextView
                android:id="@+id/tv_day_of_week_6"
                style="@style/WeekOfDaySelector"
                android:onClick="@{() -> frequency.toggleBit(5)}"
                android:text="@string/day_of_week_6"
                app:selected="@{frequency.friday}"
                tools:ignore="MissingConstraints" />

        <TextView
                android:id="@+id/tv_day_of_week_7"
                style="@style/WeekOfDaySelector"
                android:onClick="@{() -> frequency.toggleBit(6)}"
                android:text="@string/day_of_week_7"
                app:selected="@{frequency.saturday}"
                tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Group
                android:id="@+id/g_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{frequency.type == Type.WEEKLY ? View.VISIBLE : View.GONE}"
                app:constraint_referenced_ids="flow_week,tv_day_of_week_1,tv_day_of_week_2,tv_day_of_week_3,tv_day_of_week_4,tv_day_of_week_5,tv_day_of_week_6,tv_day_of_week_7"
                app:enabled="@{frequency.enable}" />

        <RadioGroup
                android:id="@+id/rg_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@id/layer_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/lyt_bottom">
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{frequency.monthlyExtra == Frequency.Monthly.SAME_DAY.num}"
                    android:enabled="@{frequency.enable}"
                    android:onClick="@{() -> frequency.setMonthlyExtra(Frequency.Monthly.SAME_DAY)}"
                    android:text="@string/freq_same_day_of_month" />

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{frequency.monthlyExtra == Frequency.Monthly.SAME_DAY_OF_WEEK.num}"
                    android:enabled="@{frequency.enable}"
                    android:onClick="@{() -> frequency.setMonthlyExtra(Frequency.Monthly.SAME_DAY_OF_WEEK)}"
                    android:text="@{textDayOfWeekOfMonth}"
                    tools:text="on every third Thursday" />
        </RadioGroup>

        <androidx.constraintlayout.widget.Group
                android:id="@+id/g_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{frequency.type == Type.MONTHLY ? View.VISIBLE : View.GONE}"
                app:constraint_referenced_ids="rg_month"
                app:enabled="@{frequency.enable}" />

        <RadioGroup
                android:id="@+id/rg_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@id/lyt_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layer_top">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{frequency.yearlyExtra == Frequency.Yearly.SAME_DAY.num}"
                    android:enabled="@{frequency.enable}"
                    android:onClick="@{() -> frequency.setYearlyExtra(Frequency.Yearly.SAME_DAY)}"
                    android:text="@string/freq_same_day_of_year" />

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{frequency.yearlyExtra == Frequency.Yearly.SAME_DAY_OF_WEEK_OF_MONTH.num}"
                    android:enabled="@{frequency.enable}"
                    android:onClick="@{() -> frequency.setYearlyExtra(Frequency.Yearly.SAME_DAY_OF_WEEK_OF_MONTH)}"
                    android:text="@{textDayOfWeekOfMonthOfYear}"
                    tools:text="on every third Thursday on September" />
        </RadioGroup>

        <androidx.constraintlayout.widget.Group
                android:id="@+id/g_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{frequency.type == Type.YEARLY ? View.VISIBLE : View.GONE}"
                app:constraint_referenced_ids="rg_year"
                app:enabled="@{frequency.enable}" />

        <Button
                android:id="@+id/lyt_bottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="@{onSaveListener}"
                android:text="@string/confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>